[package]
name = "actix_example"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt =  "2.7.0"
actix-web = "4.0.1"
serde = {version = "1.0.137", features = ["derive"] }
dotenv = "0.15.0"
config = "0.13.1"
anyhow = "1.0.57"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = { version =  "0.10.2", features = ["serde"] }
tokio-postgres = "0.7.6"
itertools = "0.10.3"
eyre = "0.6.8"