[package]
name = "uniswap-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
web3 = "0.18.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
anyhow = "1.0.55"
rust_decimal = {version = "1.22.0", features = ["maths"]}
rust_decimal_macros = "1.22.0"
eyre = "0.6.7"
num-traits = "0.2.14"
convert_case = "=0.1.0"
chrono = "0.4.19"
time = "0.3.7"
async-trait = { version = "0.1.50", default-features = false }