[package]
name = "rust_client"
version = "0.1.0"
edition = "2018"


[features]
no-entrypoint = []
test-bpf = []
default = []


[dependencies]
anchor-client = {path = "../client"}
shellexpand = "2.1.0"
anyhow = "1.0.32"
rand = "0.7.3"
clap = "3.0.0-beta.2"
solana-sdk = "1.7.11"
solana-program-test = "1.7.11"
solana-program = "1.7.11"
borsh ="0.9.1"
anchor_study = {path = "../programs/anchor_study", features = ["no-entrypoint"]}
hello_world = {path = "../programs/hello_world"}


